--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ langchainhub = "^0.1.21"
 black = "^24.10.0"
 langchain-pinecone = "^0.2.0"
 langchain-community = "^0.3.5"
+pypdf = "^5.1.0"
+faiss-cpu = "^1.9.0"
 
 
 [build-system]
